tests/compile_fail/invalid_complex_selector_struct_literal.rs
use surgeist_style::ComplexSelector;

fn main() {
    let _selector = ComplexSelector { parts: Vec::new() };
}
