tests/compile_fail/invalid_complex_selector_struct_literal.stderr
error[E0451]: field `parts` of struct `ComplexSelector` is private
 --> tests/compile_fail/invalid_complex_selector_struct_literal.rs:4:39
  |
4 |     let _selector = ComplexSelector { parts: Vec::new() };
  |                                       ^^^^^ private field
